--- a/main.css
+++ b/main.css
@@ -33,15 +33,79 @@ body{
     font-weight: bold;
     font-style: italic;
     background-image: url("blackSatin.jpg");
+    
 }
+
+#allCards{
+    display: flex;
+}
+
+h4{
+    opacity:1;
+}
+
+.card{
+    box-shadow: 0 16px 28px 0 rgba(194, 194, 194, 0.5);
+    transition: 0.5s;
+    border-radius: 5px; /* 5px rounded corners */
+    margin-left: 10%;
+    margin-right: 10%;
+    flex-direction: row;
+    width: 20%;
+    height:20%;
+    font-weight: bold;
+    color:rgba(255, 252, 252, 0.5);
+    background-color: rgb(7, 77, 42);
+    padding: 16px 16px 16px 16px;
+    text-shadow:6px 6px 6px rgb(41, 136, 28);
+    opacity: 0.8;
+}
+
+
+.card2{
+    box-shadow: 0 16px 28px 0 rgba(194, 194, 194, 0.5);
+    transition: 0.5s;
+    border-radius: 5px; /* 5px rounded corners */
+    margin-left: 10%;
+    margin-right: 10%;
+    flex-direction: row;
+    width: 20%;
+    height:20%;
+    font-weight: bold;
+    color:rgba(255, 252, 252, 0.5);
+    background-color: rgb(28, 31, 184);
+    padding: 16px 16px 16px 16px;
+    text-shadow:6px 6px 6px rgb(93, 190, 235);
+    opacity: 0.8;
+}
+
+
+
+.card3{
+    box-shadow: 0 16px 28px 0 rgba(194, 194, 194, 0.5);
+    transition: 0.5s;
+    border-radius: 5px; /* 5px rounded corners */
+    margin-left: 10%;
+    margin-right: 10%;
+    flex-direction: row;
+    width: 20%;
+    height:20%;
+    font-weight: bold;
+    color:rgba(255, 255, 255, 0.5);
+    background-color: rgb(85, 22, 201);
+    padding: 16px 16px 16px 16px;
+    text-shadow:6px 6px 6px rgb(150, 92, 241);
+    opacity: 0.8;
+}
+
+
+
+
 
 p{
     font-size: medium;
     font-weight: lighter;
 }
-
-
-
 
 footer{
     text-align:center;
