--- a/VLC.css
+++ b/VLC.css
@@ -1,3 +1,60 @@
+html{
+    overflow-y: auto;
+}
+/*changed to overall page*/
 body{
     background-image: url("greenVelvet.jpg");
+    font-family: Apple Chancery, cursive;
+    font-weight: bold;
+    font-style: italic;
+
 }
+
+/*Scrollbar*/
+::-webkit-scrollbar{
+    background-color: rgb(19, 54, 8);
+    opacity: 0.5;
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb{
+    opacity: 0.5;
+    background-color: rgb(227, 115, 94);
+    height: 20%;
+    border-radius: 10px;
+}
+
+
+/*Titles of page*/
+h1, h2{
+    font-weight: bold;
+    font-style: italic; 
+    color: rgb(155, 133, 38);
+    text-align: center;
+    text-shadow:6px 6px 6px rgb(128, 50, 34);
+}
+
+/*baquette image in right corner*/
+img{
+    clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
+    position: fixed;
+    top:10px;
+    width: 5%;
+    height: 30%; 
+    right: 5px;
+    resize: horizontal;
+    margin-right: 5%;
+    border: 5px solid rgb(155, 133, 38);
+}
+
+aside{
+    width: 20%;
+    float: right;
+    background-color:rgb(160, 65, 46);
+    color: rgb(255, 251, 251);
+    padding: 5px;
+    margin: 10px;
+    height: 50%;
+    opacity: .8;
+    border-radius: 10px;
+}
+
