--- a/main.css
+++ b/main.css
@@ -4,10 +4,20 @@ html{
     height: 100%;
     /*adds vertical scroll bar*/
     overflow-y: auto;
-    
 }
 
+::-webkit-scrollbar{
+    background-color: rgb(7, 4, 4);
+    opacity: 0.5;
+    border-radius: 10px;
+}
 
+::-webkit-scrollbar-thumb{
+    opacity: 0.5;
+    background-color: rgb(116, 14, 14);
+    height: 20%;
+    border-radius: 10px;
+}
 
 nav{
     opacity:50%;
@@ -17,11 +27,11 @@ nav{
 
 
 
-h1{
+h1, h3{
     font-family: 'Apple Chancery', cursive;
     font-weight: bold;
     font-style: italic; 
-    color: rgb(187, 187, 187);
+    color: rgb(209, 209, 209);
     text-align: center;
     text-shadow:6px 6px 6px rgb(153, 25, 25);
 
@@ -36,11 +46,13 @@ body{
     
 }
 
+
+
 #allCards{
     display: flex;
 }
 
-h4{
+h4, h6{
     opacity:1;
 }
 
@@ -51,13 +63,13 @@ h4{
     margin-left: 10%;
     margin-right: 10%;
     flex-direction: row;
-    width: 20%;
+    width: 50%;
     height:20%;
     font-weight: bold;
-    color:rgba(255, 252, 252, 0.5);
+    color:rgba(255, 255, 255, 0.5);
     background-color: rgb(7, 77, 42);
     padding: 16px 16px 16px 16px;
-    text-shadow:6px 6px 6px rgb(41, 136, 28);
+    text-shadow:6px 6px 6px rgb(0, 0, 0);
     opacity: 0.8;
 }
 
@@ -69,14 +81,14 @@ h4{
     margin-left: 10%;
     margin-right: 10%;
     flex-direction: row;
-    width: 20%;
+    width: 50%;
     height:20%;
     font-weight: bold;
-    color:rgba(255, 252, 252, 0.5);
+    color:rgba(255, 255, 255, 0.5);
     background-color: rgb(28, 31, 184);
     padding: 16px 16px 16px 16px;
-    text-shadow:6px 6px 6px rgb(93, 190, 235);
-    opacity: 0.8;
+    text-shadow:6px 6px 6px rgb(0, 0, 0);
+    opacity: 0.7;
 }
 
 
@@ -88,14 +100,14 @@ h4{
     margin-left: 10%;
     margin-right: 10%;
     flex-direction: row;
-    width: 20%;
+    width: 50%;
     height:20%;
     font-weight: bold;
     color:rgba(255, 255, 255, 0.5);
     background-color: rgb(85, 22, 201);
     padding: 16px 16px 16px 16px;
-    text-shadow:6px 6px 6px rgb(150, 92, 241);
-    opacity: 0.8;
+    text-shadow:6px 6px 6px rgb(0, 0, 0);
+    opacity: 0.7;
 }
 
 
@@ -123,5 +135,5 @@ footer{
 
 /*Email address*/
 a{
-    color: rgb(224, 29, 104);
+    color: rgb(247, 177, 27);
 }
