--- a/FAH.css
+++ b/FAH.css
@@ -2,5 +2,39 @@ body{
     font-family: Apple Chancery, cursive;
     font-weight: bold;
     font-style: italic;
-    background-image: url("linenTowel.jpg");
+    background-image: url("Cone.jpg");
+    background-size: 1800px;
+}
+
+/*Titles of page*/
+h1, h2{
+    font-weight: bold;
+    font-style: italic; 
+    color: rgb(231, 232, 233);
+    text-align: center;
+    text-shadow: 6px 6px 6px rgb(13, 112, 151);
+}
+
+img{
+    position: fixed;
+    top:10px;
+    width: 10%;
+    height: 40%; 
+    right: 10px;
+    resize: horizontal;
+    margin: 10px;
+    border: 5px solid rgb(38, 112, 155);
+    border-radius: 10px;
+}
+
+aside{
+    width: 20%;
+    float: right;
+    background-color:rgb(206, 166, 107);
+    color: rgb(255, 251, 251);
+    padding: 5px;
+    margin: 10px;
+    height: 50%;
+    opacity: .8;
+    border-radius: 10px;
 }
