--- a/main.css
+++ b/main.css
@@ -14,19 +14,117 @@ html{
 
 ::-webkit-scrollbar-thumb{
     opacity: 0.5;
-    background-color: rgb(116, 14, 14);
+    background-color: rgb(184, 28, 28);
     height: 20%;
     border-radius: 10px;
 }
 
-nav{
-    opacity:50%;
-    background-color: black;
-}
+/* Navigation Bar*/
+a {
+    color: #fff;
+    text-decoration: none;
+    opacity: 0.7;
+  }
+  
+  .p-menu1{
+     height: 50%;
+  }
+  
+  /* Hamburger */
+  .hamburger1 {
+    height: 45px;
+    margin: 10px;
+    display: inline-block;
+    grid-template-rows: repeat(3, 1fr);
+    justify-items: left;
+    z-index: 20;
+  }
+  
+  .hamburger1 div {
+    background-color: rgb(175, 24, 24);
+    position: relative;
+    width: 20px;
+    height: 5px;
+    margin-top: 5px;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+  }
+  
+  #toggle1 {
+    display: none;
+  }
+  
+  #toggle1:checked + .hamburger1 .top {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    margin-top: 2.5px;
+  }
+  
+  #toggle1:checked + .hamburger1 .meat {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    margin-top: -5px;
+  }
+  
+  #toggle1:checked + .hamburger1 .bottom {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  
+  
+  #toggle1:checked ~ .menu1 {
+    height: 350px;
+    left: 20px;
+  }
+  
+  
+  /* Menu */
+  .menu1 {
+    width: 50%;
+    background-color: #000000;
+    margin-left: 0;
+    display: -ms-grid;
+    display: grid;
+    grid-template-rows: 1fr repeat(4, 0.5fr);
+    grid-row-gap: 10px;
+    list-style: none;
+    left: -150px; /* Position the menu to the left */
+    width: 20%;
+    text-align: left;
+    height: 0px;
+    overflow: hidden;
+    z-index: 120;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    opacity: 0.6;
+  }
+  
+  .menu1 a:first-child {
+    margin-top: 5px;
+  }
+  
+  .menu1 a:last-child {
+    margin-bottom: 5px;
+  }
+  
+  .link1 {
+    width: 75%;
+    padding: 5px;
+    font-family: 'Apple Chancery', cursive;
+    opacity: 0.7;
+  }
+  
+  .link1:hover {
+    background-color: #a51111;
+    color: rgb(255, 255, 255);
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    opacity: 0.8;
+  }
 
+/* Navigation Bar closed*/
 
-
-
+/*Titles*/
 h1, h3{
     font-family: 'Apple Chancery', cursive;
     font-weight: bold;
@@ -34,7 +132,6 @@ h1, h3{
     color: rgb(209, 209, 209);
     text-align: center;
     text-shadow:6px 6px 6px rgb(153, 25, 25);
-
 }
 
 
@@ -42,83 +139,109 @@ body{
     font-family: Apple Chancery, cursive;
     font-weight: bold;
     font-style: italic;
-    background-image: url("blackSatin.jpg");
-    
+    background-image: url("blackSatin.jpg"); 
 }
 
 
-
+/* Cards */
 #allCards{
     display: flex;
 }
 
-h4, h6{
+h4, h5{
     opacity:1;
 }
 
-.card{
-    box-shadow: 0 16px 28px 0 rgba(194, 194, 194, 0.5);
-    transition: 0.5s;
+img{
     border-radius: 5px; /* 5px rounded corners */
-    margin-left: 10%;
-    margin-right: 10%;
-    flex-direction: row;
-    width: 50%;
-    height:20%;
-    font-weight: bold;
-    color:rgba(255, 255, 255, 0.5);
-    background-color: rgb(7, 77, 42);
-    padding: 16px 16px 16px 16px;
-    text-shadow:6px 6px 6px rgb(0, 0, 0);
-    opacity: 0.8;
 }
 
+/* Verny's card*/
+    .card{
+        box-shadow: 0 16px 28px 0 rgba(255, 255, 255, 0.5);
+        transition: 0.5s;
+        border-radius: 5px; /* 5px rounded corners */
+        margin-left: 10%;
+        margin-right: 10%;
+        flex-direction: row;
+        width: 70%;
+        height:30%;
+        text-align: center;
+        font-weight: bold;
+        color:rgba(255, 255, 255, 0.904);
+        background-color: rgb(7, 77, 42);
+        padding: 16px 16px 16px 16px;
+        text-shadow:6px 6px 6px rgb(0, 0, 0);
+        opacity: 0.8;
+    }
 
-.card2{
-    box-shadow: 0 16px 28px 0 rgba(194, 194, 194, 0.5);
-    transition: 0.5s;
-    border-radius: 5px; /* 5px rounded corners */
-    margin-left: 10%;
-    margin-right: 10%;
-    flex-direction: row;
-    width: 50%;
-    height:20%;
-    font-weight: bold;
-    color:rgba(255, 255, 255, 0.5);
-    background-color: rgb(28, 31, 184);
-    padding: 16px 16px 16px 16px;
-    text-shadow:6px 6px 6px rgb(0, 0, 0);
-    opacity: 0.7;
-}
+/* Faneshia's card*/
+    .card2{
+        box-shadow: 0 16px 28px 0 rgba(255, 255, 255, 0.5);
+        transition: 0.5s;
+        border-radius: 5px; /* 5px rounded corners */
+        margin-left: 10%;
+        margin-right: 10%;
+        flex-direction: row;
+        width: 70%;
+        text-align: center;
+        height:100%;
+        font-weight: bold;
+        color:rgba(255, 255, 255, 0.911);
+        background-color: rgb(28, 31, 184);
+        padding: 16px 16px 16px 16px;
+        text-shadow:6px 6px 6px rgb(0, 0, 0);
+        opacity: 0.7;
+    }
 
 
+/* Monique's card*/
+    .card3{
+        box-shadow: 0 16px 28px 0 rgba(194, 194, 194, 0.5);
+        transition: 0.5s;
+        border-radius: 5px; /* 5px rounded corners */
+        margin-left: 10%;
+        margin-right: 10%;
+        flex-direction: row;
+        text-align: center;
+        width: 70%;
+        height:100%;
+        font-weight: bold;
+        color:rgba(255, 255, 255, 0.911);
+        background-color: rgb(85, 22, 201);
+        padding: 16px 16px 16px 16px;
+        text-shadow:6px 6px 6px rgb(0, 0, 0);
+        opacity: 0.7;
+    }
 
-.card3{
-    box-shadow: 0 16px 28px 0 rgba(194, 194, 194, 0.5);
-    transition: 0.5s;
-    border-radius: 5px; /* 5px rounded corners */
-    margin-left: 10%;
-    margin-right: 10%;
-    flex-direction: row;
-    width: 50%;
-    height:20%;
-    font-weight: bold;
-    color:rgba(255, 255, 255, 0.5);
-    background-color: rgb(85, 22, 201);
-    padding: 16px 16px 16px 16px;
-    text-shadow:6px 6px 6px rgb(0, 0, 0);
-    opacity: 0.7;
-}
+    /* Music Card*/
+    .card4{
+        box-shadow: 0 16px 28px 0 rgba(255, 255, 255, 0.5);
+        transition: 0.5s;
+        border-radius: 5px; /* 5px rounded corners */
+        margin-left: auto;
+        margin-right: auto;
+        width: 30%;
+        display: block;
+        text-align: center;
+        height:20%;
+        font-weight: bold;
+        color:rgba(255, 255, 255, 0.911);
+        background-color: rgb(185, 26, 39);
+        padding: 16px 16px 16px 16px;
+        text-shadow:6px 6px 6px rgb(0, 0, 0);
+        opacity: 0.8;
+    }
 
 
-
-
+/*Card closed*/
 
 p{
     font-size: medium;
     font-weight: lighter;
 }
 
+/*Footer*/
 footer{
     text-align:center;
     color: rgb(187, 187, 187);
